--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   api:
     image: oseniasjunior/api-task
     ports:
-      - "3000:3000"  # Use a porta original do desafio
+      - "3000:3000"
     volumes:
-      - ./data:/app/data  # Mantenha o volume para o SQLite
+      - ./data:/app/data
     command: sh -c "python manage.py migrate && gunicorn DesafioAngularBackend.wsgi --bind 0.0.0.0:3000"
+
